--- a/page_about.html
+++ b/page_about.html
@@ -207,6 +207,47 @@
 
               </div>
             </div>
+
+            <br>
+
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title">Jobs</div>
+              </div>
+
+              <div class="card-content">
+                <table class="table is-fullwidth is-hoverable">
+                  <thead>
+                    <tr>
+                      <th>Member</th>
+                      <th>Job Title</th>
+                      <th>Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>John</td>
+                      <td>I do SEO for your blog</td>
+                      <td><p class="tag is-warning">In progress</p></td>
+                      <td><button class="button is-small is-black is-outlined">Complete</button></td>
+                    </tr>
+                    <tr>
+                      <td>John</td>
+                      <td>I do SEO for your blog</td>
+                      <td><p class="tag is-warning">In progress</p></td>
+                      <td><button class="button is-small is-black is-outlined">Complete</button></td>
+                    </tr>
+                    <tr>
+                      <td>John</td>
+                      <td>I do SEO for your blog</td>
+                      <td><p class="tag is-warning">In progress</p></td>
+                      <td><button class="button is-small is-black is-outlined">Complete</button></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
           <!-- END RIGHT COLUMN -->
         </div>
